--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,11 +13,13 @@ galaxy_info:
         - precise
         - trusty
         - xenial
+        - bionic
     - name: Debian
       versions:
         - wheezy
         - jessie
         - stretch
+        - buster
   galaxy_tags:
     - web
 dependencies: []
