--- a/tests/tasks/pre.yml
+++ b/tests/tasks/pre.yml
@@ -88,7 +88,7 @@
 - name: percona server | ensure grants
   mysql_user:
     name: wordpress
-    password: wordpress
+    password: 'heCrE7*d2KEs'
     priv: 'wordpress.*:ALL'
 
 - name: apache server | start
