--- a/tasks/themes.yml
+++ b/tasks/themes.yml
@@ -1,7 +1,7 @@
 # tasks file
 ---
 - name: themes | identify installation
-  command: >
+  ansible.builtin.command: >
     wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}
   register: _check_installation_themes
   failed_when: false
@@ -14,7 +14,7 @@
     - wordpress-themes-is-installed-theme
 
 - name: themes | install
-  command: >
+  ansible.builtin.command: >
     wp-cli --allow-root --no-color --path='{{ item.item.0.path }}' theme install {{ item.item.1.name }}
   with_items: "{{ _check_installation_themes.results | default([]) }}"
   when:
@@ -24,7 +24,7 @@
     - wordpress-themes-install-theme
 
 - name: themes | check install
-  command: >
+  ansible.builtin.command: >
     wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}
   changed_when: false
   with_subelements:
@@ -35,7 +35,7 @@
     - wordpress-themes-install-theme-check
 
 - name: themes | activate
-  command: >
+  ansible.builtin.command: >
     wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme activate {{ item.1.name }}
   register: _check_activate_theme
   changed_when: "'Success: Switched to' in _check_activate_theme.stdout"
