--- a/tests/handlers/main.yml
+++ b/tests/handlers/main.yml
@@ -1,16 +1,16 @@
 # handlers file
 ---
 - name: restart apache2
-  service:
+  ansible.builtin.service:
     name: apache2
     state: restarted
 
 - name: reload apache2
-  service:
+  ansible.builtin.service:
     name: apache2
     state: reloaded
 
 - name: restart mysql
-  service:
+  ansible.builtin.service:
     name: mysql
     state: restarted
