--- a/tests/test.yml
+++ b/tests/test.yml
@@ -5,10 +5,10 @@
   become: true
   pre_tasks:
     - name: include vars
-      include_vars: "{{ playbook_dir }}/vars/main.yml"
+      ansible.builtin.include_vars: "{{ playbook_dir }}/vars/main.yml"
     - name: include tasks
-      include: "{{ playbook_dir }}/tasks/pre.yml"
+      ansible.builtin.ansible.builtin.: "{{ playbook_dir }}/tasks/pre.yml"
   roles:
     - ../../
   handlers:
-    - import_tasks: "{{ playbook_dir }}/handlers/main.yml"
+    - ansible.builtin.import_tasks: "{{ playbook_dir }}/handlers/main.yml"
