--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -5,13 +5,13 @@
   become: true
   pre_tasks:
     - name: include vars
-      include_vars: "{{ playbook_dir }}/vars/main.yml"
+      ansible.builtin.include_vars: "{{ playbook_dir }}/vars/main.yml"
     - name: include tasks
-      include: "{{ playbook_dir }}/tasks/pre.yml"
+      ansible.builtin.import_tasks: "{{ playbook_dir }}/tasks/pre.yml"
   roles:
     - ../../
   handlers:
-    - import_tasks: "{{ playbook_dir }}/handlers/main.yml"
+    - ansible.builtin.import_tasks: "{{ playbook_dir }}/handlers/main.yml"
   vars:
     wordpress_installs:
       - name: wordpress
