--- a/tests/test.yml
+++ b/tests/test.yml
@@ -7,7 +7,7 @@
     - name: include vars
       ansible.builtin.include_vars: "{{ playbook_dir }}/vars/main.yml"
     - name: include tasks
-      ansible.builtin.ansible.builtin.: "{{ playbook_dir }}/tasks/pre.yml"
+      ansible.builtin.import_tasks: "{{ playbook_dir }}/tasks/pre.yml"
   roles:
     - ../../
   handlers:
