--- a/tests/test.yml
+++ b/tests/test.yml
@@ -11,4 +11,5 @@
   roles:
     - ../../
   handlers:
-    - ansible.builtin.import_tasks: "{{ playbook_dir }}/handlers/main.yml"
+    - name: include handlers
+      ansible.builtin.import_tasks: "{{ playbook_dir }}/handlers/main.yml"
